--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Run YouTube to Instagram bot 4x daily
 
 on:
   schedule:
-    - cron: '0 0,6,12,18 * * *'  # Runs at 00:00, 06:00, 12:00, 18:00 UTC every day
-  workflow_dispatch:  # Allows you to trigger manually if needed
+    - cron: '0 */6 * * *'  # Every 6 hours
+  workflow_dispatch:
 
 jobs:
   run-bot:
@@ -16,12 +16,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'
+
+      - name: Save cookies.txt from secret
+        run: echo "${{ secrets.COOKIES_TXT }}" > cookies.txt
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
-      - name: Run bot
-        run: |
-          python main.py
+      - name: Run the bot
+        run: python main.py
+
